Fix z-index of ul element for mobile viewe

--- a/css/leon.css
+++ b/css/leon.css
@@ -90,6 +90,7 @@ body {
   min-width: 200px;
   top: calc(100% + 15px);
   display: none;
+  z-index: 1;
 }
 .header .links ul::before {
   content: '';
